@startuml Railway System

' Entities
class Station {
  StationName : VARCHAR(255) <<PK>>
  Tracks : INTEGER
  CityName : VARCHAR(255) <<PK, FK>>
  Region : VARCHAR(255) <<PK, FK>>
}

class City {
  CityName : VARCHAR(255) <<PK>>
  Region : VARCHAR(255) <<PK>>
}

class Train {
  TrainNr : INTEGER <<PK>>
  Length : INTEGER
}

' Relationships
class Connected {
  StationName : String <<PK, FK>>
  CityName : VARCHAR(255) <<PK, FK>>
  Region : VARCHAR(255) <<PK, FK>>
  TrainNr : INTEGER <<PK, FK>>
  Departure : TIME
  Arrival : TIME
}

class Start {
  StationName : String <<PK, FK>>
  CityName : VARCHAR(255) <<PK, FK>>
  Region : VARCHAR(255) <<PK, FK>>
  TrainNr : INTEGER <<PK, FK>>
}

class End {
  StationName : String <<PK, FK>>
  CityName : VARCHAR(255) <<PK, FK>>
  Region : VARCHAR(255) <<PK, FK>>
  TrainNr : INTEGER <<PK, FK>>
}

' Relationships
City ||--o{ Station : Lie_in
Station ||--o{ Connected
Station ||--o{ Start
Station ||--o{ End
Train ||--o{ Connected
Train ||--o{ Start
Train ||--o{ End

@enduml